@@ -193,6 +193,22 @@ class TestUIContract(ResourcedTestCase):
         out, err = proc.communicate()
         proc.returncode
 
+    def test_subprocesses_have_stdin(self):
+        # exec_subprocess should 'work like popen'.
+        ui = self.ui_factory()
+        proc = ui.subprocess_Popen('ls', stdout=subprocess.PIPE,
+            stderr=subprocess.PIPE)
+        proc.stdout.read(0)
+        out, err = proc.communicate()
+
+    def test_subprocesses_have_stdout(self):
+        # exec_subprocess should 'work like popen'.
+        ui = self.ui_factory()
+        proc = ui.subprocess_Popen('ls', stdout=subprocess.PIPE,
+            stderr=subprocess.PIPE)
+        proc.stdout.read(0)
+        out, err = proc.communicate()
+
     def test_make_result(self):
         # make_result should return a TestResult.
         ui = self.ui_factory()
